<resources>
    <!--
        一些小的技巧：
        选择要包裹的代码块，然后按下ctrl + alt + t
        第一行代码的源码下载github路径:https://github.com/newcaoguo/booksource
    -->
    <string name="app_name">网络测试</string>
    <string name="web_dbg_mothod">网络请求方式调试</string>
    <string name="httpclient_dbg">HttpClient 网络连接调试</string>
    <string name="httpclient">httpclient</string>
    <string name="default_web">https://www.baidu.com</string>
    <string name="get_debug">get测试</string>
    <string name="post_debug">post测试</string>
    <string name="down_image">图片下载</string>
    <string name="image_down_for_gallery">照片墙</string>
    <string name="down_images">下载图片</string>
    <string name="set_image">设置图片</string>
    <string name="set_bitmap">设置图片</string>
    <string name="user_defind_view">自定义View</string>
    <string name="frist_button">第一个Button</string>
    <string name="second_button">第二个Button</string>
    <string name="service_life_debug">服务调试</string>
    <string name="stop_service1">停止服务1</string>
    <string name="start_service2">开启服务2</string>
    <string name="start_service1">开启服务1</string>
    <string name="stop_service2">停止服务2</string>
    <string name="unbind_service2">解绑服务2</string>
    <string name="bind_service2">绑定服务2</string>
    <string name="unbind_service1">解绑服务1</string>
    <string name="bind_service1">绑定服务1</string>
    <string name="item_ui">菜单选项</string>
    <string name="fragment_ui_show">Fragment ui show</string>

    <string name="fragment_debug">Fragment</string>
    <string name="fragement">碎片调试</string>
    <string name="network_debug_view">网络</string>
    <string name="userdefined_debug_view">自定义</string>
    <string name="photo_debug_view">照片墙</string>
    <string name="service_debug_view">服务</string>

    <string name="fragment_thread_tips">调试多线程界面</string>

</resources>

















