<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learn.zsh.internetlearn.NetMainUI">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/web_dbg_mothod" />

        <Button
            android:id="@+id/httpclient_dbg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="29dp"
            android:text="@string/httpclient" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="12dp"
            android:text="@string/httpclient_dbg" />

        <Button
            android:id="@+id/images_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/httpclient_dbg"
            android:text="@string/image_down_for_gallery" />

        <Button
            android:id="@+id/user_defind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@+id/httpclient_dbg"
            android:text="@string/user_defind_view" />

        <Button
            android:id="@+id/servicedebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/user_defind"
            android:layout_below="@+id/user_defind"
            android:text="@string/service_life_debug" />

        <Button
            android:id="@+id/fragme_dbg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/user_defind"
            android:layout_alignBottom="@+id/user_defind"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/user_defind"
            android:text="@string/fragement" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
